# pose-emti-v2

./: .gitignore  CMakeLists.txt  README.md  circledec.cpp  circledec.h  main.cpp  pose-emti-v2.sln  pose-emti-v2.vcxproj  pose-emti-v2.vcxproj.filters
pose-emti-v2/: circledec.h  main.cpp  pose-emti-v2.vcxproj  pose-emti-v2.vcxproj.filters
